# TrajPlanARPL

./: .gitignore  README.md  install_trajgen_depend.sh
ros_traj_gen_utils/: CMakeLists.txt  package.xml
ros_traj_gen_utils/config/: perch_config.yaml  perch_sim.yaml  std_launch.yaml
ros_traj_gen_utils/include/ros_traj_gen_utils/: apriltag_utils.h  geometric_controller.h  odom_utils.h  poscmd_publisher.h  rect_node.h  ros_cuboid_utils.h  ros_replanner_utils.h  ros_traj_utils.h  ros_waypoint_utils.h
ros_traj_gen_utils/launch/: perch.launch.py  traj_plan.launch.py
ros_traj_gen_utils/msg/: CuboidMap.msg  StdTraj.msg
ros_traj_gen_utils/src/: ros_replanner_utils.cpp  traj_manager.cpp
ros_traj_gen_utils/src/control/: geometric_controller.cpp  so3_control_node.cpp
ros_traj_gen_utils/src/cuboid_map/: ros_cuboid_utils.cpp
ros_traj_gen_utils/src/pub_sub/: apriltag_utils.cpp  odom_utils.cpp  poscmd_publisher.cpp  ros_traj_utils.cpp  ros_waypoint_utils.cpp
traj_gen/: CMakeLists.txt  package.xml
traj_gen/include/traj_gen/trajectory/: FOV.h  QPpolyTraj.h  TrajBase.h  Waypoint.h
traj_gen/src/traj_src/: FOV.cpp  QPpolyTraj.cpp  TrajBase.cpp  Waypoint.cpp
traj_gen_test/: README.md  package.xml  setup.cfg  setup.py
traj_gen_test/config/: planner_test.yaml
traj_gen_test/launch/: dummy_test.launch.py  offboard_bridge.launch.py  so3_control.launch.py
traj_gen_test/rviz/: dummy_test.rviz
traj_gen_test/scripts/: plot_plan_vs_actual.py  plot_traj_vs_actual.py
traj_gen_test/traj_gen_test/: dummy_publisher.py  offboard_bridge.py
