<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traj_gen</name>
  <version>0.0.0</version>
  <description>Polynomial trajectory generation library (ROS 2 port).</description>

  <maintainer email="jeff@todo.todo">jeff</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav_msgs</depend>
  <depend>eigen</depend>

  <!-- System / third-party dependencies installed via install_trajgen_depend.sh:
       nlopt, ooqp, blas, ma27, gfortran -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
